# conan_learning

./: Doxyfile  README.md
blog/: create-and-test-conan-package.md  getting-started-with-conan.md  profiles-build-requires-cross-building.md  publish-conan-package-to-artifactory.md  setup-gtest-with-conan.md  working-with-nonconan-packages.md
conan_gtest/: CMakeLists.txt  cmake_3.15.7.profile  conanfile.py
conan_gtest/src/: CMakeLists.txt  main.cpp
conan_gtest/src/test/: CMakeLists.txt
conan_gtest/test_package/: conanfile.py  example.cpp
conan_gtest_use/: conan_gtest_use.cpp
crossbuild/conan_gtest/: conanfile.py  linux_to_win64.profile
logs/: conan-create-console-output.txt  conan-crossbuild-console-output.txt  conan-export-pkg-linux-console-output.txt  conan-export-pkg-windows-console-output.txt  conan-install-console-output.txt
nonconan/legacypkg/: linux_gcc.profile  windows_vs.profile
nonconan/legacypkg/binary_windows/: random.lib
nonconan/legacypkg/test_package/: conanfile.py  example.cpp
nonconan/random/src/: random.h
nonconan/random_use/: CMakeLists.txt
sources/conan_gtest/: CMakeLists.txt  cmake_3.19.2.profile  conanfile.py  conanfile.txt
sources/conan_gtest/src/: main.cpp  sample.cpp  sample.h
sources/conan_gtest/test_package/: example.cpp
sources/conan_gtest_use/: CMakeLists.txt  conan_gtest_use.cpp  conanfile.txt  main.cpp  use.cpp  use.h
sources/crossbuild/conan_gtest/: CMakeLists.txt
sources/nonconan/legacypkg/: conanfile.py
sources/nonconan/random/: CMakeLists.txt  doxygen.random.conf
(+26 files in other folders)
